--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "muRty"]
+	path = muRty
+	url = https://github.com/arg0naut91/murty
+	shallow = true
+	registered = true
+[submodule "neatRanges"]
+	path = neatRanges
+	url = https://github.com/arg0naut91/neatranges
+	shallow = true
+	registered = true
